Fix FAQ panel alignment on different device sizes

--- a/hra/patternlab/site/sass/molecules/_faqs.scss
+++ b/hra/patternlab/site/sass/molecules/_faqs.scss
@@ -16,6 +16,14 @@
         background-color: #eee;
         content: '';
     }
+
+    @include media-query(tablet) {
+        margin-top: 65px;
+    }
+
+    @include media-query(mobile) {
+        margin-top: 80px;
+    }
 }
 
 .faq-panel {
@@ -40,12 +48,13 @@
         transition: transform 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
         @include media-query(laptop) {
-            margin-top: 20px;
+            margin-top: 55px;
         }
 
         @include media-query(tablet) {
             width: 100%;
             padding: 20px 0;
+            margin-top: 0;
         }
     }
 
